--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
   --purple: #6f42c1;
   --pink: #e83e8c;
   --red: #dc3545;
-  --orange: #258aa5;
+  --orange: #11738d;
   --yellow: #ffc107;
   --green: #28a745;
   --teal: #20c997;
@@ -24,7 +24,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  /*--primary: #258aa5;*/
+  /*--primary: #11738d;*/
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -42,8 +42,8 @@
 
   /* --primary: #427272; */
   /* --link: #e28b3d; */
-  --primary: #258aa5;
-  --link: #ad5b1f;
+  --primary: #11738d;
+  --link: #000000;
 }
 
 *,
@@ -164,7 +164,7 @@ sup {
 }
 
 a {
-  color: #ad5b1f;
+  color: #000000;
   text-decoration: none;
   background-color: transparent;
 }
@@ -2444,8 +2444,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #258aa5;
-  border-color: #258aa5;
+  background-color: #11738d;
+  border-color: #11738d;
 }
 .btn-primary:hover {
   color: #fff;
@@ -2460,8 +2460,8 @@ fieldset:disabled a.btn {
 }
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #258aa5;
-  border-color: #258aa5;
+  background-color: #11738d;
+  border-color: #11738d;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
@@ -2683,25 +2683,25 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #258aa5;
-  border-color: #258aa5;
+  color: #11738d;
+  border-color: #11738d;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #258aa5;
-  border-color: #258aa5;
+  background-color: #11738d;
+  border-color: #11738d;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #258aa5;
+  color: #11738d;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #258aa5;
-  border-color: #258aa5;
+  background-color: #11738d;
+  border-color: #11738d;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.5);
@@ -2884,7 +2884,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #258aa5;
+  color: #11738d;
   text-decoration: none;
 }
 .btn-link:hover {
@@ -3161,7 +3161,7 @@ input[type=button].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #258aa5;
+  background-color: #11738d;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #6c757d;
@@ -3490,8 +3490,8 @@ input[type=button].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #258aa5;
-  background-color: #258aa5;
+  border-color: #11738d;
+  background-color: #11738d;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.25);
@@ -3546,8 +3546,8 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #258aa5;
-  background-color: #258aa5;
+  border-color: #11738d;
+  background-color: #11738d;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
@@ -3749,7 +3749,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #258aa5;
+  background-color: #11738d;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3778,7 +3778,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #258aa5;
+  background-color: #11738d;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3810,7 +3810,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #258aa5;
+  background-color: #11738d;
   border: 0;
   border-radius: 1rem;
   -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3931,7 +3931,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #258aa5;
+  background-color: #11738d;
 }
 
 .nav-fill > .nav-link,
@@ -4582,7 +4582,7 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #258aa5;
+  color: #11738d;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -4611,8 +4611,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #258aa5;
-  border-color: #258aa5;
+  background-color: #11738d;
+  border-color: #11738d;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4688,7 +4688,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #258aa5;
+  background-color: #11738d;
 }
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
@@ -4967,7 +4967,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #258aa5;
+  background-color: #11738d;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5048,8 +5048,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #258aa5;
-  border-color: #258aa5;
+  background-color: #11738d;
+  border-color: #11738d;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -6080,7 +6080,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #258aa5 !important;
+  background-color: #11738d !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6208,7 +6208,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #258aa5 !important;
+  border-color: #11738d !important;
 }
 
 .border-secondary {
@@ -9788,7 +9788,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #258aa5 !important;
+  color: #11738d !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -10103,7 +10103,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #258aa5;
+  background-color: #11738d;
 }
 
 .dev-icons {
